tests/api_misuse/register_impl_for_pointer.rs
fn main() {}



trait MyTrait {}

struct MyStruct;

#[traitreg::register]
impl MyTrait for *const MyStruct {}
